몇가지 정리한 버젼
CoreData의 사용과 Delegate를 이용한 뷰 편집기능 추가

--- a/RollingPaper/RollingPaper/RollingPaper-Info.plist
+++ b/RollingPaper/RollingPaper/RollingPaper-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>ko_KR</string>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
@@ -65,11 +65,11 @@
 			<key>TintColor</key>
 			<dict>
 				<key>Blue</key>
-				<real>0.38415260036496351</real>
+				<real>0.3841526003649635</real>
 				<key>Green</key>
 				<real>0.7599509580291971</real>
 				<key>Red</key>
-				<real>0.68841240875912413</real>
+				<real>0.6884124087591241</real>
 			</dict>
 			<key>Translucent</key>
 			<false/>
@@ -78,8 +78,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 </dict>
 </plist>
