--- a/RollingPaper/RollingPaper/RollingPaper-Info.plist
+++ b/RollingPaper/RollingPaper/RollingPaper-Info.plist
@@ -56,6 +56,8 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<false/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleBlackOpaque</string>
 	<key>UIStatusBarTintParameters</key>
 	<dict>
 		<key>UINavigationBar</key>
@@ -65,11 +67,11 @@
 			<key>TintColor</key>
 			<dict>
 				<key>Blue</key>
-				<real>0.38415260036496351</real>
+				<real>0.0</real>
 				<key>Green</key>
-				<real>0.7599509580291971</real>
+				<real>0.0</real>
 				<key>Red</key>
-				<real>0.68841240875912413</real>
+				<real>0.0</real>
 			</dict>
 			<key>Translucent</key>
 			<false/>
