녹음기 등등하고 각종 자료편집 끝

--- a/RollingPaper/RollingPaper/RollingPaper-Info.plist
+++ b/RollingPaper/RollingPaper/RollingPaper-Info.plist
@@ -4,6 +4,15 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>ko_KR</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>08SeoulHangangM.ttf</string>
+		<string>08SeoulNamsanM.ttf</string>
+		<string>NanumBrush.ttf</string>
+		<string>NanumGothic.ttf</string>
+		<string>NanumMyeongjo.ttf</string>
+		<string>NanumPen.ttf</string>
+	</array>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
@@ -67,11 +76,11 @@
 			<key>TintColor</key>
 			<dict>
 				<key>Blue</key>
-				<real>0.0</real>
+				<real>0</real>
 				<key>Green</key>
-				<real>0.0</real>
+				<real>0</real>
 				<key>Red</key>
-				<real>0.0</real>
+				<real>0</real>
 			</dict>
 			<key>Translucent</key>
 			<false/>
