--- a/RollingPaper/RollingPaper/RollingPaper-Info.plist
+++ b/RollingPaper/RollingPaper/RollingPaper-Info.plist
@@ -42,6 +42,18 @@
 				<string>fb333864290041286</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string>logo3</string>
+			<key>CFBundleURLName</key>
+			<string>RollingPaper</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>rollingpaper</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
