--- a/RollingPaper/Podfile
+++ b/RollingPaper/Podfile
@@ -1,5 +1,14 @@
-platform :ios ,'5.0'
-pod 'AFNetworking', '1.1.0'
-pod 'SYCache', '1.0'
-pod 'JSONKit', '1.5pre'
-pod 'Facebook-iOS-SDK'
+xcodeproj 'RollingPaper.xcodeproj'
+platform :ios, '5.1'
+
+pod 'AFNetworking', 	   '~> 1.3.0'
+pod 'Facebook-iOS-SDK',    '~> 3.5.1'
+pod 'SYCache'
+pod 'JSONKit'
+pod 'MBProgressHUD'
+pod 'Underscore.m'
+
+target :Specs do
+  pod 'Cedar'
+  pod 'OCMock'
+end
