--- a/RollingPaper/Podfile
+++ b/RollingPaper/Podfile
@@ -1,9 +1,8 @@
 xcodeproj 'RollingPaper.xcodeproj'
 platform :ios, '5.1'
 
-pod 'AFNetworking', 	   '~> 1.3.0'
-pod 'Facebook-iOS-SDK',    '~> 3.5.1'
-pod 'SYCache'
+pod 'AFNetworking'
+pod 'Facebook-iOS-SDK'
 pod 'JSONKit'
 pod 'MBProgressHUD'
 pod 'Underscore.m'
